--- a/Quaternion-master/Implémentation SOIL.cbp
+++ b/Quaternion-master/Implémentation SOIL.cbp
@@ -46,15 +46,11 @@
 		<Unit filename="include/Block.h" />
 		<Unit filename="include/Camera.h" />
 		<Unit filename="include/Map.h" />
-		<Unit filename="include/Quaternion.h">
-			<Option target="Release" />
-		</Unit>
+		<Unit filename="include/Quaternion.h" />
 		<Unit filename="src/Block.cpp" />
 		<Unit filename="src/Camera.cpp" />
 		<Unit filename="src/Map.cpp" />
-		<Unit filename="src/Quaternion.cpp">
-			<Option target="Release" />
-		</Unit>
+		<Unit filename="src/Quaternion.cpp" />
 		<Unit filename="src/main.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
